# fasikl-demo

./: .gitignore  README.md  goal.txt  pyproject.toml
docs/: design-note.md
src/fasikl_assistant/: __init__.py  agent.py  api.py  classifier.py  cli.py  guardrails.py  mock_mcp.py  models.py  responder.py  router.py  sample_data.py  text.py
tests/: test_agent.py  test_api.py  test_mock_mcp.py  test_regression_samples.py
